<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyRound</string>
    <string name="failed_token">Client Failed to retrieve token from server</string>
    <string name="BraintreeFragment_initialized">BraintreeFragment is ready to use</string>
    <string name="issues_with_authorization">There was an issue with your authorization string</string>
    <string name="token_failed">Fail to retrieve client token </string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Close</string>
    <string name="e_g_walkinstown">e.g. Walkinstown</string>
    <string name="find_beer_in">Find beer in…</string>
    <string name="find_beer">Find beer</string>
    <string name="i_am_over_18">I am over 18</string>
    <string name="please_drink_responsibly">Please drink responsibly</string>
    <string name="log_in">Log in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign up</string>
    <string name="logo">logo</string>
    <string name="retailer">Retailer</string>
    <string name="user">Customer</string>
    <string name="log_out">log out</string>
    <string name="save">save</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="town">Town</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delivery_hours">Delivery Hours</string>
    <string name="my_details">my details</string>
    <string name="customer_orders">Customer Orders</string>
    <string name="sales_analysis">My Sales</string>
    <string name="email1">email</string>
    <string name="confirm_password1">confirm password</string>
    <string name="sign_up1">sign up</string>
    <string name="log_in1">log in</string>
    <string name="enter_code">enter code</string>
    <string name="email3">email</string>
    <string name="confirm_password3">confirm password</string>
    <string name="sign_up3">sign up</string>
    <string name="log_in3">log in</string>
    <string name="log_out1">log out</string>
    <string name="save1">save</string>
    <string name="full_name">Full Name</string>
    <string name="house_number_and_street">House number and street</string>
    <string name="town1">Town</string>
    <string name="mobile_number1">Mobile Number</string>
    <string name="my_detailsss">my details</string>
    <string name="view_retailers1">View Retailers</string>
    <string name="log_innn">Log in</string>
    <string name="find_beer1">Find beer</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="my_details_">My Details</string>
    <string name="my_details6">My Details</string>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="label_cancel">cancel</string>
    <string name="label_submit">submit</string>
    <string name="label_type_your_comment">Write review..</string>
    <string name="title_activity_my_beers">MyBeers</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_beer_leaderboard">BeerLeaderboardActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>


</resources>
