<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_login"
            android:icon="@drawable/profile_icon"
            android:title="@string/log_innn" />
        <item
            android:id="@+id/item_b"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/find_beer1"/>
        <item
            android:id="@+id/item_c"
            android:icon="@drawable/order"
            android:title="@string/orders" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
