<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    >

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:background="@drawable/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/logInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_border"
        android:onClick="onLogInBtnClick"
        android:text="@string/log_in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/logInPassword"
        app:layout_constraintBottom_toTopOf="@+id/signUpLinkBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/logInEmail"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="168dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <EditText
        android:id="@+id/logInPassword"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/logInEmail"
        android:layout_alignLeft="@id/logInEmail"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/logInEmail"
        app:layout_constraintTop_toBottomOf="@+id/logInEmail" />


    <Button
        android:id="@+id/signUpLinkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="124dp"
        android:background="@drawable/button_border"
        android:onClick="onSignUpLinkBtnClick"
        android:text="@string/sign_up"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>