<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RetailerActivities.RetailerSU">

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_marginBottom="294dp"
        android:background="@drawable/button_border"
        app:layout_constraintBottom_toTopOf="@+id/retCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/retEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/retPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/retEmail"
        android:layout_alignRight="@+id/retEmail"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="52dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/retEmail"
        app:layout_constraintTop_toBottomOf="@+id/retEmail" />

    <EditText
        android:id="@+id/retVerifyPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/retEmail"
        android:layout_alignRight="@+id/retEmail"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="@string/confirm_password1"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/retPassword"
        app:layout_constraintTop_toBottomOf="@+id/retPassword" />

    <Button
        android:id="@+id/retSignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:background="@drawable/button_border"
        android:onClick="onRet_SignUpBtnClick"
        android:text="@string/sign_up1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retCode" />

    <Button

        android:id="@+id/logInLinkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_border"
        android:onClick="onLogInLinkBtnClick"
        android:text="@string/log_in1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/retCode"
        android:background="@drawable/edittext_border"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/enter_code"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/retSignUpBtn"
        app:layout_constraintEnd_toEndOf="@+id/retVerifyPassword"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>